--- a/Mectronics_Front/GestionBuses/index.html
+++ b/Mectronics_Front/GestionBuses/index.html
@@ -74,55 +74,57 @@
                 </tbody>
             </table>
 
-           <!-- Botón para abrir modal de nuevo bus -->
-           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalRegistroBus" onclick="nuevo()">
-            Nuevo
-        </button>
+            <!-- Botón para abrir modal de nuevo bus -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalGuardarBus">
+                Nuevo
+            </button>
 
-        <!-- Modal para registrar o editar bus -->
-        <div class="modal fade" id="modalRegistroBus" tabindex="-1" aria-labelledby="modalRegistroBusTitulo" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="modalRegistroBusTitulo">Guardar Bus</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form id="registroForm">
-                            <input type="hidden" id="idBus">
+            <!-- Modal para registrar o editar bus -->
+            <div class="modal fade" id="modalGuardarBus" tabindex="-1" aria-labelledby="modalGuardarBusTitulo"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="modalGuardarBusTitulo">Guardar Bus</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="formularioGuardarBuses">
+                                <input type="hidden" id="idBus">
 
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="modelo" required>
-                                <label for="modelo" class="form-label">Modelo</label>
-                            </div>
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control" id="modelo" required>
+                                    <label for="modelo" class="form-label">Modelo</label>
+                                </div>
 
-                            <div class="form-floating mb-3">
-                                <input type="number" class="form-control" id="capacidad" required>
-                                <label for="capacidad" class="form-label">Capacidad</label>
-                            </div>
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control" id="capacidad" required>
+                                    <label for="capacidad" class="form-label">Capacidad</label>
+                                </div>
 
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="placa" required>
-                                <label for="placa" class="form-label">Placa</label>
-                            </div>
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control" id="placa" maxlength="6" required>
+                                    <label for="placa" class="form-label">Placa</label>
+                                </div>
 
-                            <div class="mb-3">
-                                <label for="estadoBus" class="form-label">Estado</label>
-                                <select class="form-select" id="estadoBus" required>
-                                </select>
-                            </div>
+                                <div class="mb-3">
+                                    <label for="idEstado" class="form-label">Estado</label>
+                                    <select class="form-select" id="idEstado" required>
+                                    </select>
+                                </div>
 
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="cerrarModal">Cerrar</button>
-                            <button type="submit" class="btn btn-primary">Guardar</button>
-                        </form>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                                    id="cerrarModal">Cerrar</button>
+                                <button type="submit" class="btn btn-primary">Guardar</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-    
+
 
     <script>
         // Función para mostrar el formulario seleccionado
@@ -136,6 +138,7 @@
             document.getElementById(formId).style.display = 'block';
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/gh/noumanqamar450/alertbox@main/version/1.0.2/alertbox.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
