Implementación consulta programación

--- a/Mectronics_Front/GestionConductores/index.html
+++ b/Mectronics_Front/GestionConductores/index.html
@@ -35,9 +35,9 @@
                         <li id="opcionMenuGestionCond" class="nav-item" style="display: none;"><a class="nav-link"
                                 href="../GestionConductores/index.html">Gestión Conductores</a></li>
                         <li id="opcionMenuGestionProg" class="nav-item" style="display: none;"><a class="nav-link"
-                                href="#">Programación Horarios</a></li>
+                                href="../Programacion/index.html">Programación Horarios</a></li>
                         <li id="opcionMenuConsultarProg" class="nav-item" style="display: none;"><a class="nav-link"
-                                href="../ConductorHorario/ConductorHorario.html">Visualización de Programación</a></li>
+                                href="../VisualizarProgramacion/index.html">Visualización de Programación</a></li>
                         <li class="nav-item"><a class="nav-link" onclick="cerrarSesion()">Cerrar Sesión</a></li>
                     </ul>
                 </div>
@@ -72,7 +72,8 @@
             </table>
 
             <!-- Botón para abrir modal de nuevo bus -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalGuardarConductor">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                data-bs-target="#modalGuardarConductor">
                 Nuevo
             </button>
 
@@ -113,7 +114,7 @@
 
                                 <div class="mb-3">
                                     <label for="estadoConductor" class="form-label">Estado del Conductor</label>
-                                    <select class="form-select" id="estadoConductor" required>                                        
+                                    <select class="form-select" id="estadoConductor" required>
                                     </select>
                                 </div>
 
@@ -139,7 +140,7 @@
     <script src="../Scripts/Sesion.js"></script>
     <script src="../Scripts/Configuracion.js"></script>
     <script src="../Scripts/Encriptar.js"></script>
-    
+
 </body>
 
 </html>
