--- a/Mectronics_Front/Login/Login.html
+++ b/Mectronics_Front/Login/Login.html
@@ -18,7 +18,7 @@
                 <label for="login-email" class="form-label">Correo</label>
                 <div class="input-group">
                     <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                    <input type="email" id="login-email" class="form-control" placeholder="Ingrese su correo" value="administrador@mectronics.co" required>
+                    <input type="email" id="login-email" class="form-control" placeholder="Ingrese su correo"  required>
                 </div>
             </div>
 
@@ -26,7 +26,7 @@
                 <label for="login-password" class="form-label">Contraseña</label>
                 <div class="input-group">
                     <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                    <input type="password" id="login-password" class="form-control" value="admin.2025" placeholder="Ingrese su contraseña"
+                    <input type="password" id="login-password" class="form-control" placeholder="Ingrese su contraseña"
                         required>
                 </div>
             </div>
