--- a/Mectronics_Front/MenuPrincipal/Inicio.html
+++ b/Mectronics_Front/MenuPrincipal/Inicio.html
@@ -1,50 +1,63 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sistema Gestion Transporte</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-   <nav class="navbar navbar-expand-md bg-dark sticky-top border-bottom" data-bs-theme="dark">
-        <div class="container">
-          <a class="navbar-brand d-md-none" href="#">
-            <img src="../Imagenes/logo.png">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasLabel">Sistema Gestion Transporte</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav flex-grow-1 justify-content-between">
-                <li class="nav-item"><a class="nav-link" href="#">
-                    <img src="../Imagenes/logo.png">
-                </a></li>
-                <li id="opcionMenuGestionBuses" style="display: none;" class="nav-item"><a class="nav-link" href="../GestionBuses/index.html">Gestión Buses</a></li>
-                <li id="opcionMenuGestionCond" class="nav-item" style="display: none;"><a class="nav-link" href="../GestionConductores/index.html">Gestión Conductores</a></li>
-                <li id="opcionMenuGestionProg" class="nav-item" style="display: none;"><a class="nav-link" href="#">Programación Horarios</a></li>
-                <li id="opcionMenuConsultarProg" class="nav-item" style="display: none;"><a class="nav-link" href="../ConductorHorario/ConductorHorario.html">Visualización de Programación</a></li> 
-                <li class="nav-item"><a class="nav-link" onclick="cerrarSesion()">Cerrar Sesión</a></li>                
-              </ul>
-            </div>
-          </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sistema Gestion Transporte</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-md bg-dark sticky-top border-bottom" data-bs-theme="dark">
+    <div class="container">
+      <a class="navbar-brand d-md-none" href="#">
+        <img src="../Imagenes/logo.png">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas"
+        aria-controls="offcanvas" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasLabel">Sistema Gestion Transporte</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-      </nav>
-      <style>
-        /* Evita que el texto del menú sea seleccionable y cambia el cursor a pointer */
-        .nav-item {
-            user-select: none; /* Evita la selección del texto */
-            cursor: pointer;   /* Cambia el cursor a una mano */
-        }
-      </style>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../Scripts/Inicio.js"></script>
-    <script src="../Scripts/Sesion.js"></script>
-    <script src="../Scripts/Configuracion.js"></script>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav flex-grow-1 justify-content-between">
+            <li class="nav-item"><a class="nav-link" href="#">
+                <img src="../Imagenes/logo.png">
+              </a></li>
+            <li id="opcionMenuGestionBuses" style="display: none;" class="nav-item"><a class="nav-link"
+                href="../GestionBuses/index.html">Gestión Buses</a></li>
+            <li id="opcionMenuGestionCond" class="nav-item" style="display: none;"><a class="nav-link"
+                href="../GestionConductores/index.html">Gestión Conductores</a></li>
+            <li id="opcionMenuGestionProg" class="nav-item" style="display: none;"><a class="nav-link"
+                href="../Programacion/index.html">Programación Horarios</a></li>
+            <li id="opcionMenuConsultarProg" class="nav-item" style="display: none;"><a class="nav-link"
+                href="../VisualizarProgramacion/index.html">Visualización de Programación</a></li>
+            <li class="nav-item"><a class="nav-link" onclick="cerrarSesion()">Cerrar Sesión</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <style>
+    /* Evita que el texto del menú sea seleccionable y cambia el cursor a pointer */
+    .nav-item {
+      user-select: none;
+      /* Evita la selección del texto */
+      cursor: pointer;
+      /* Cambia el cursor a una mano */
+    }
+  </style>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="../Scripts/Inicio.js"></script>
+  <script src="../Scripts/Sesion.js"></script>
+  <script src="../Scripts/Configuracion.js"></script>
 </body>
+
 </html>
