--- a/Mectronics_Front/VisualizarProgramacion/index.html
+++ b/Mectronics_Front/VisualizarProgramacion/index.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Buses</title>
-    <!--<link rel="stylesheet" href="BusRegistro.css">-->
+    <title>Visualizar Programación</title>
+    <!--<link rel="stylesheet" href="ConductorRegistro.css">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-md bg-dark sticky-top border-bottom" data-bs-theme="dark">
         <div class="container">
             <a class="navbar-brand d-md-none" href="#">
@@ -56,95 +55,43 @@
     </style>
     <div class="container">
 
-        <h2>Gestionar Buses</h2>
+        <h2>Visualizar Programación</h2>
+
+        <form id="formulario" class="row g-4">            
+            <div class="col-md-4">
+              <label for="filtro" class="visually-hidden">Filtro</label>
+              <input type="text" class="form-control" id="filtro" placeholder="Placa Bus o Nombre Conductor">
+            </div>
+            <div class="col-auto">
+              <button type="submit" class="btn btn-primary mb-3">Buscar</button>
+            </div>
+          </form>
+
         <div class="table-responsive small">
             <table class="table table-striped table-sm">
                 <thead>
                     <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Modelo</th>
-                        <th scope="col">Capacidad</th>
-                        <th scope="col">Placa</th>
-                        <th scope="col">Estado Bus</th>
-                        <th scope="col">Editar</th>
+                        <th scope="col">Bus</th>
+                        <th scope="col">Conductor</th>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Hora Inicio Operación</th>
+                        <th scope="col">Hora Fin Operación</th>                        
                     </tr>
                 </thead>
-                <tbody>
-
-                </tbody>
+                <tbody id="tablaProgramaciones"> </tbody>
             </table>
-
-            <!-- Botón para abrir modal de nuevo bus -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalGuardarBus">
-                Nuevo
-            </button>
-
-            <!-- Modal para registrar o editar bus -->
-            <div class="modal fade" id="modalGuardarBus" tabindex="-1" aria-labelledby="modalGuardarBusTitulo"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="modalGuardarBusTitulo">Guardar Bus</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form id="formularioGuardarBuses">
-                                <input type="hidden" id="idBus">
-
-                                <div class="form-floating mb-3">
-                                    <input type="number" class="form-control" id="modelo" required>
-                                    <label for="modelo" class="form-label">Modelo</label>
-                                </div>
-
-                                <div class="form-floating mb-3">
-                                    <input type="number" class="form-control" id="capacidad" required>
-                                    <label for="capacidad" class="form-label">Capacidad</label>
-                                </div>
-
-                                <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="placa" maxlength="6" required>
-                                    <label for="placa" class="form-label">Placa</label>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="idEstado" class="form-label">Estado</label>
-                                    <select class="form-select" id="idEstado" required>
-                                    </select>
-                                </div>
-
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
-                                    id="cerrarModal">Cerrar</button>
-                                <button type="submit" class="btn btn-primary">Guardar</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
-
-
-    <script>
-        // Función para mostrar el formulario seleccionado
-        function mostrarFormulario(formId) {
-            // Oculta todos los formularios
-            document.querySelectorAll('.form-container').forEach(form => {
-                form.style.display = 'none';
-            });
-
-            // Muestra el formulario seleccionado
-            document.getElementById(formId).style.display = 'block';
-        }
-    </script>
     <script src="https://cdn.jsdelivr.net/gh/noumanqamar450/alertbox@main/version/1.0.2/alertbox.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="../Scripts/GestionBuses.js"></script>
+    <script src="../Scripts/VisualizarProgramacion.js"></script>
     <script src="../Scripts/Sesion.js"></script>
     <script src="../Scripts/Configuracion.js"></script>
+    <script src="../Scripts/Encriptar.js"></script>
+
 </body>
 
 </html>
